Improving frameBuffer level

--- a/src/data/levels/05b_PPU/02_Frame buffer/chat/en.yml
+++ b/src/data/levels/05b_PPU/02_Frame buffer/chat/en.yml
@@ -21,7 +21,7 @@ examples:
   - "💙  ```javascript 0xFFFF0000``` = blue"
   - "⚪  ```javascript 0xFFFFFFFF``` = white"
   - "🖤  ```javascript 0xFF000000``` = black"
-  - "🔘  ```javascript 0xFF989898``` = gray"
+  - "🦈  ```javascript 0xFF989898``` = gray"
   - "💛  ```javascript 0xFF00F8F8``` = yellow"
   responses:
   - ...main
@@ -60,14 +60,25 @@ draw:
   - |-
     📚  _-_ok, let's add this to your PPU's constructor:
       ```javascript
-      this.frameBuffer = new Uint32Array(256*240);
-
-      // fill the entire screen with red:
-      for (let i = 0; i < 256 * 240; i++)
-        this.frameBuffer[i] = 0xff0000ff;```_--_
-  - _-_modify your `step` method so it receives an `onFrame` callback as parameter_--_
+      this.frameBuffer = new Uint32Array(256*240);```_--_
   - |-
-    _-_then, every time you detect a new frame (right after ```javascript this.frame++;```), call it with the frame buffer, like this:
+    _-_implement this method:_--_
+    **plot(x, y, color)**:
+      **->** assigns the ~color~ to the pixel ~(x,y)~ in the ~frameBuffer~ array
+        (the index for ~(x,y)~ should be ~y * 256 + x~)
+  - _-_then, modify your `step` method so it receives an `onFrame` callback as parameter_--_
+  - |-
+    _-_and every time you detect a new frame (right after ```javascript this.frame++;```), call it with the frame buffer, like this:
       ```javascript onFrame(this.frameBuffer);```_--_
-  - _-_try it! when loading a ROM, it should paint the screen in red _--_🔴
+  - |-
+    to ensure that everything works correctly, add this code before the `onFrame` call:
+    ```javascript
+    // <test>
+    for (let x = 0; x < 256; x++) {
+      for (let y = 0; y < 240; y++) {
+        this.plot(x, y, 0xff000000 | this.frame % 0xff);
+      }
+    }
+    // </test>```
+  - _-_try it! when loading a ROM, it should slowly paint the screen in red _--_🔴
   responses: []
