--- a/src/data/levels/03_Cartridge/04_Reading the header/chat/es.yml
+++ b/src/data/levels/03_Cartridge/04_Reading the header/chat/es.yml
@@ -63,8 +63,8 @@ padding:
 nybble:
   messages:
   - un nybble es medio byte
-  - por lo que "nybble inferior" significa los primeros 4 bits (```raw 0000```~XXXX~)
-  - y "nybble superior" significa los últimos 4 bits (~XXXX~```raw 0000```)
+  - por lo que "nybble inferior" significa los primeros 4 bits (```raw 0000```~1011~)
+  - y "nybble superior" significa los últimos 4 bits (~1011~```raw 0000```)
   responses:
   - ...exercise
 
