--- a/src/data/levels/03_Cartridge/04_Reading the header/chat/en.yml
+++ b/src/data/levels/03_Cartridge/04_Reading the header/chat/en.yml
@@ -63,8 +63,8 @@ padding:
 nybble:
   messages:
   - a nybble is half a byte
-  - so "lower nybble" means the first 4 bits (```raw 0000```~XXXX~)
-  - and "upper nybble" means the last 4 bits (~XXXX~```raw 0000```)
+  - so "lower nybble" means the first 4 bits (```raw 0000```~1011~)
+  - and "upper nybble" means the last 4 bits (~1011~```raw 0000```)
   responses:
   - ...exercise
 
