--- a/src/data/levels/05b_PPU/01_New PPU/chat/es.yml
+++ b/src/data/levels/05b_PPU/01_New PPU/chat/es.yml
@@ -64,14 +64,14 @@ next:
   - 📚  _-_crea un archivo para el código de la PPU, usando _--_📄 _-_ ~/tmpl/ppu/PPU.js~ como plantilla_--_
   - |-
     _-_para llevar un seguimiento del tiempo, agrega este método:_--_
-    **step()**:
-      **->** incrementa ~cycle~
-      **->** si ~cycle >= 341~:
-        **->** asigna ~cycle = 0~
-        **->** incrementa ~scanline~
-        **->** si ~scanline >= 261~:
-          **->** asigna ~scanline = -1~
-          **->** incrementa ~frame~
+    *_-_*step()**:_--_
+      *_-_*->** incrementa ~cycle~_--_
+      *_-_*->** si ~cycle >= 341~:_--_
+        *_-_*->** asigna ~cycle = 0~_--_
+        *_-_*->** incrementa ~scanline~_--_
+        *_-_*->** si ~scanline >= 261~:_--_
+          *_-_*->** asigna ~scanline = -1~_--_
+          *_-_*->** incrementa ~frame~_--_
   - _-_luego, importa tu archivo desde _--_📄 _-_ ~/code/index.js~_--_
   - _-_y agrega la correspondiente clave `PPU` al objeto exportado_--_
   responses:
