--- a/src/data/levels/05b_PPU/02_Frame buffer/chat/es.yml
+++ b/src/data/levels/05b_PPU/02_Frame buffer/chat/es.yml
@@ -63,15 +63,15 @@ draw:
       this.frameBuffer = new Uint32Array(256*240);```_--_
   - |-
     _-_implementa este método:_--_
-    **plot(x, y, color)**:
-      **->** asigna el ~color~ al píxel ~(x,y)~ en el array ~frameBuffer~
-        (el índice para ~(x,y)~ debería ser ~y * 256 + x~)
+    *_-_*plot(x, y, color)**:_--_
+      *_-_*->** asigna el ~color~ al píxel ~(x,y)~ en el array ~frameBuffer~_--_
+        _-_(el índice para ~(x,y)~ debería ser ~y * 256 + x~)_--_
   - _-_luego, modifica tu método `step` para que reciba un callback `onFrame` como parámetro_--_
   - |-
     _-_y cada vez que detectes un nuevo frame (justo después de ```javascript this.frame++;```), llámalo con el frame buffer, así:
       ```javascript onFrame(this.frameBuffer);```_--_
   - |-
-    para asegurarnos de que todo funciona correctamente, agrega este código antes de la llamada a `onFrame`:
+    _-_para asegurarnos de que todo funciona correctamente, agrega este código antes de la llamada a `onFrame`:
     ```javascript
     // <test>
     for (let x = 0; x < 256; x++) {
@@ -79,6 +79,6 @@ draw:
         this.plot(x, y, 0xff000000 | this.frame % 0xff);
       }
     }
-    // </test>```
+    // </test>```_--_
   - _-_¡pruébalo! al iniciar una ROM, debería lentamente pintar la pantalla de rojo _--_🔴
   responses: []
