--- a/src/data/levels/05a_CPU/03_Flags/chat/en.yml
+++ b/src/data/levels/05a_CPU/03_Flags/chat/en.yml
@@ -31,10 +31,10 @@ what:
   - _-_initialize them with ~false~_--_
   - |-
     _-_then implement, following the previous table:_--_
-    **getValue()**:
-      **->** should return an 8-bit number with all the flags
-    **setValue(value)**:
-      **->** should assign all the flags from the received 8-bit number
+    *_-_*getValue()**:_--_
+      *_-_*->** should return an 8-bit number with all the flags_--_
+    *_-_*setValue(value)**:_--_
+      *_-_*->** should assign all the flags from the received 8-bit number_--_
   - _-_i.e. with ~i~ and ~v~ on, ```javascript getValue()``` should return ```javascript 0b01100100```_--_
   - _-_and ```javascript setValue(0b00000010)``` should set all booleans to ~false~, except for ~z~_--_
   responses:
