--- a/src/data/levels/05a_CPU/05_Stack/chat/en.yml
+++ b/src/data/levels/05a_CPU/05_Stack/chat/en.yml
@@ -7,10 +7,10 @@ main:
   - _-_it should receive the `memory` and `sp` from the CPU, as it will have to interact with them_--_
   - |-
     _-_implement these methods:_--_
-    **push(value)**:
-      **->** writes ~value~ to the memory address ~currentAddress~, then decrements ~sp~
-    **pop()**:
-      **->** increments ~sp~ and returns the result of reading ~currentAddress~ from memory
+    *_-_*push(value)**:_--_
+      *_-_*->** writes ~value~ to the memory address ~currentAddress~, then decrements ~sp~_--_
+    *_-_*pop()**:_--_
+      *_-_*->** increments ~sp~ and returns the result of reading ~currentAddress~ from memory_--_
   - _-_the ~currentAddress~ always equals $0100 (where the stack lives in RAM), plus the value in [SP]_--_
   - |-
     _-_when you finish, add a new stack instance to the CPU:
