--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
@@ -77,18 +77,18 @@ implement:
   - revisa 📄  ~/lib/cpu/interrupts.js~
   - |-
     📚  _-_agrega este método a tu `CPU`:_--_
-    **interrupt(interrupt, withBFlag = false)**:
-      **->** si ~interrupt.id === "IRQ"~ y ~I=1~, retorna 0
-        (la interrupción es ignorada)
-      **->** pone [PC] en la pila
-      **->** pone el byte de banderas en la pila
-        (si ~withBFlag~ es ~true~, el valor se agrega a la pila con el bit 4 encendido)
-        (de lo contrario, se agrega tal cual está)
-      **->** avanza 7 ciclos (~this.cycle += 7~)
-      **->** asigna ~I=1~ en el registro de banderas
-      **->** asigna [PC] = al resultado de leer las direcciones ~interrupt.vector~ y ~interrupt.vector+1~ en Little Endian
-        (recuerda que tienes un método ~read16(...)~ para eso)
-      **->** retorna 7
+    *_-_*interrupt(interrupt, withBFlag = false)**:_--_
+      *_-_*->** si ~interrupt.id === "IRQ"~ y ~I=1~, retorna 0_--_
+        _-_(la interrupción es ignorada)_--_
+      *_-_*->** pone [PC] en la pila_--_
+      *_-_*->** pone el byte de banderas en la pila_--_
+        _-_(si ~withBFlag~ es ~true~, el valor se agrega a la pila con el bit 4 encendido)_--_
+        _-_(de lo contrario, se agrega tal cual está)_--_
+      *_-_*->** avanza 7 ciclos (~this.cycle += 7~)_--_
+      *_-_*->** asigna ~I=1~ en el registro de banderas_--_
+      *_-_*->** asigna [PC] = al resultado de leer las direcciones ~interrupt.vector~ y ~interrupt.vector+1~ en Little Endian_--_
+        _-_(recuerda que tienes un método ~read16(...)~ para eso)_--_
+      *_-_*->** retorna 7_--_
   responses:
   - ¿y BRK? [brk]
 
