--- a/src/data/levels/05b_PPU/01_New PPU/chat/en.yml
+++ b/src/data/levels/05b_PPU/01_New PPU/chat/en.yml
@@ -64,14 +64,14 @@ next:
   - 📚  _-_create a file for the PPU code, using _--_📄 _-_ ~/tmpl/ppu/PPU.js~ as template_--_
   - |-
     _-_to keep track of the timing, add this method:_--_
-    **step()**:
-      **->** increments ~cycle~
-      **->** if ~cycle >= 341~:
-        **->** sets ~cycle = 0~
-        **->** increments ~scanline~
-        **->** if ~scanline >= 261~:
-          **->** sets ~scanline = -1~
-          **->** increments ~frame~
+    *_-_*step()**:_--_
+      *_-_*->** increments ~cycle~_--_
+      *_-_*->** if ~cycle >= 341~:_--_
+        *_-_*->** sets ~cycle = 0~_--_
+        *_-_*->** increments ~scanline~_--_
+        *_-_*->** if ~scanline >= 261~:_--_
+          *_-_*->** sets ~scanline = -1~_--_
+          *_-_*->** increments ~frame~_--_
   - _-_then, import your file from _--_📄 _-_ ~/code/index.js~_--_
   - _-_and add the corresponding `PPU` key to the exported object_--_
   responses:
