Creating PPUMemory file and template

--- a/src/data/levels/04_Memory/02_Devices/chat/en.yml
+++ b/src/data/levels/04_Memory/02_Devices/chat/en.yml
@@ -4,14 +4,15 @@ main:
   - remember, every hardware component has to be connected to the memory
   - as you make progress in your development, you will have to update your `CPUMemory` class, adding the correct mappings
   - one important device we need to add is the 🗜️  Mapper, which will handle all the interactions with game code (🤖  PRG-ROM)
+  - the 🧠  CPU accesses the code just by reading bytes inside $4020-$FFFF
   - let's make our memory receive a bunch of <devices> 📱
   - |-
     📚  _-_add the following method to your `CPUMemory`:_--_
     *_-_*onLoad(ppu, apu, mapper, controllers)**:_--_
       *_-_*->** saves the parameters as properties (~this.ppu~, ~this.apu~, ~this.mapper~, and ~this.controllers~)_--_
   - _-_then, as you did before with ~this.ram~, modify `read(...)` and `write(...)` to let ~this.mapper~ handle the range $4020-$FFFF (_--_💾 _-_ Cartridge space)_--_
-  - _-_on reads, you should return ~this.mapper.cpuRead(address)~_--_
-  - _-_on writes, you should call ~this.mapper.cpuWrite(address, value)~ and return_--_
+  - _-_on <reads>, you should return ~this.mapper.cpuRead(address)~_--_
+  - _-_on <writes>, you should call ~this.mapper.cpuWrite(address, value)~ and return_--_
   responses:
   - (*) who calls the `onLoad` method? 🤔 [who]
   - (*) what's a <mapper>? 🗜️ [mapper]
